<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">


    <EditText
        android:id="@+id/entryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/rounded_backgroundwight"
        android:gravity="top"
        android:hint="@string/hint_edit_your_entry"
        android:inputType="textMultiLine"
        android:minHeight="120dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />


    <ImageButton
        android:id="@+id/clipButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_below="@id/entryEditText"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@drawable/button_background_selector"
        android:contentDescription="@string/add_image"
        android:src="@drawable/ic_clip" />


    <ImageView
        android:id="@+id/selectedImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/clipButton"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:visibility="gone" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectedImageView"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_selector"
        android:text="@string/save_button"
        android:textColor="@android:color/white"
        android:textSize="16sp" />


    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/light_blue"
        android:weightSum="3">


        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_selector"
            android:src="@drawable/ic_home"
            android:contentDescription="tring/home_button" />


        <ImageButton
            android:id="@+id/addButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_selector"
            android:src="@drawable/ic_add"
            android:contentDescription="add" />


        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_background_selector"
            android:src="@drawable/ic_calendar"
            android:contentDescription="calendar" />
    </LinearLayout>
</RelativeLayout>
